[package]
name = "simple-crud"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2.1.4"
cosmwasm-schema = "2.1.4"
cw-storage-plus = "2.0.0"
thiserror = "1.0.69"
schemars = "0.8.21"

[dev-dependencies]
cw-multi-test = "2.1.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
